unpackaged/main/default/objects/Discovery__c/Discovery__c.object-meta.xml
<CustomObject>
    <label>Discovery</label>
    <nameField>
        <label>Discovery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>