unpackaged/main/default/objects/Discovery__c/fields/Exam_Requested__c.field-meta.xml
<CustomField>
    <fullName>Exam_Requested__c</fullName>
    <label>Exam Requested</label>
    <type>Date</type>
</CustomField>