unpackaged/main/default/objects/Discovery__c/fields/Examinee__c.field-meta.xml
<CustomField>
    <fullName>Examinee__c</fullName>
    <description>Judgment Debtor Exam Examinee</description>
    <inlineHelpText>Judgment Debtor Exam Examinee</inlineHelpText>
    <label>Examinee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>