unpackaged/main/default/objects/Discovery__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Discovery</relationshipLabel>
    <relationshipName>Discovery</relationshipName>
    <type>Lookup</type>
</CustomField>