unpackaged/main/default/objects/Discovery__c/fields/Order_for_Exam_Sent_for_Service__c.field-meta.xml
<CustomField>
    <fullName>Order_for_Exam_Sent_for_Service__c</fullName>
    <label>Order for Exam Sent for Service</label>
    <type>Date</type>
</CustomField>