unpackaged/main/default/objects/Discovery__c/fields/Propounding_Party__c.field-meta.xml
<CustomField>
    <fullName>Propounding_Party__c</fullName>
    <label>Propounding Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>