unpackaged/main/default/objects/Discovery__c/fields/Records_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Records_Production_Date__c</fullName>
    <label>Records Production Date</label>
    <type>Date</type>
</CustomField>