unpackaged/main/default/objects/Discovery__c/fields/Records_Subpoena_Received__c.field-meta.xml
<CustomField>
    <fullName>Records_Subpoena_Received__c</fullName>
    <label>Records Subpoena Received</label>
    <type>Date</type>
</CustomField>