unpackaged/main/default/objects/Discovery__c/fields/Records_Subpoena_Served__c.field-meta.xml
<CustomField>
    <fullName>Records_Subpoena_Served__c</fullName>
    <label>Records Subpoena Served</label>
    <type>Date</type>
</CustomField>