unpackaged/main/default/objects/Discovery__c/fields/Requests_Received__c.field-meta.xml
<CustomField>
    <fullName>Requests_Received__c</fullName>
    <label>Requests Received</label>
    <type>Date</type>
</CustomField>