unpackaged/main/default/objects/Discovery__c/fields/Responses_Due__c.field-meta.xml
<CustomField>
    <fullName>Responses_Due__c</fullName>
    <label>Responses Due</label>
    <type>Date</type>
</CustomField>