unpackaged/main/default/objects/Discovery__c/recordTypes/Deposition.recordType-meta.xml
<RecordType>
    <fullName>Deposition</fullName>
    <active>true</active>
    <label>Deposition</label>
</RecordType>