unpackaged/main/default/objects/Discovery__c/recordTypes/Judgment_Debtor_Exam.recordType-meta.xml
<RecordType>
    <fullName>Judgment_Debtor_Exam</fullName>
    <active>true</active>
    <label>Judgment Debtor Exam</label>
</RecordType>