unpackaged/main/default/objects/Discovery__c/recordTypes/Subpoena.recordType-meta.xml
<RecordType>
    <fullName>Subpoena</fullName>
    <active>true</active>
    <label>Subpoena</label>
</RecordType>