unpackaged/main/default/objects/Discovery__c/recordTypes/Written.recordType-meta.xml
<RecordType>
    <fullName>Written</fullName>
    <active>true</active>
    <label>Written</label>
</RecordType>